# mpris-ctl

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
cli/: Cargo.toml
cli/src/: main.rs
daemon/: Cargo.toml
daemon/src/: main.rs
