[package]
name = "mpris-ctl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mpris-ctld"
path = "daemon/src/main.rs"

[[bin]]
name = "mpris-ctl"
path = "cli/src/main.rs"

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
futures = "0.3.28"
mpris = "2.0.1"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = { version = "1.0.100", features = ["std"] }
tokio = { version = "1.29.1", features = ["net", "macros", "rt", "rt-multi-thread", "io-util", "time"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
