[package]
name = "mpris-ctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
futures = { version = "0.3.28", features = ["std"] }
mpris = "2.0.1"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = { version = "1.0.100", features = ["std"] }
sorted-iter = "0.1.11"
tokio = { version = "1.29.1", features = ["net", "macros", "rt", "rt-multi-thread", "io-util", "time"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
